# laburen_desafio

./: .gitignore  README.md  README_ADDONS.md  docker-compose.yml  render.yaml  requirements.txt
api/: .env  .env.example  Dockerfile  README.md  pyproject.toml
api/app/: db.py  main.py  models.py  schemas.py  seed.py
api/app/routers/: __init__.py  carts.py  products.py
app/: cli.py  whatsapp_server.py
app/agent/: shopping_agent.py  tools.py
pgadmin/: servers.json
scripts/: agent.py
tests/: Laburen.postman_collection.json  Laburen.postman_environment.json  run_newman.ps1  run_newman.sh  test_agent.py
